# phosphor

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  codebook.toml  flake.nix  hk.pkl  result
.github/workflows/: ci.yml  update-flake-lock.yml
crates/cie-data/: Cargo.toml
crates/cie-data/src/: lib.rs
crates/phosphor-data/: Cargo.toml
crates/phosphor-data-macro/: Cargo.toml
crates/phosphor-data-macro/src/: lib.rs
crates/phosphor-data/src/: decay.rs  lib.rs  spectral.rs
data/: phosphors.toml
data/spectra/: p1_willemite.csv
dev/: flake-module.nix  flake.nix
docs/: design-beam-input.md  design-gpu-pipeline.md  design-overview.md  design-phosphor-model.md  design-ui.md
docs/plans/: 2026-02-14-crt-simulator.md  2026-02-15-hybrid-decay-model-design.md  2026-02-15-hybrid-decay-model.md  2026-02-15-multi-window-design.md  2026-02-16-csv-spectrum-loading-design.md  2026-02-16-csv-spectrum-loading.md  2026-02-16-framerate-independent-simulation-design.md  2026-02-16-framerate-independent-simulation.md  2026-02-17-main-app-refactor-design.md  2026-02-17-main-app-refactor.md
flake/: checks.nix  packages.nix
src/: app.rs  controls_window.rs  frame.rs  main.rs  presets.rs  simulation.rs  simulation_stats.rs  types.rs
src/beam/: audio.rs  external.rs  mod.rs  oscilloscope.rs  resample.rs  vector.rs
src/gpu/: accumulation.rs  beam_write.rs  beam_write.wgsl  composite.rs  composite.wgsl  decay.rs  decay.wgsl  faceplate_scatter.rs  faceplate_scatter_blur.wgsl  faceplate_scatter_downsample.wgsl  mod.rs  profiler.rs  spectral_resolve.rs  spectral_resolve.wgsl  tonemap.rs  tonemap.wgsl
src/phosphor/: mod.rs  spectral.rs
src/ui/: engineer_panel.rs  mod.rs  scope_panel.rs
tests/: decay_curve.rs
