[package]
name = "phosphor"
version = "0.1.0"
edition = "2024"

[dependencies]
# Windowing
winit = "0.31.0-beta.2"

# GPU
wgpu = "28"

# UI
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
egui_extras = { version = "0.33", features = ["file"] }

# Audio decoding (oscilloscope music input)
symphonia = { version = "0.5", default-features = false, features = [
    "wav",
    "flac",
    "ogg",
    "vorbis",
    "mp3",
    "pcm",
] }

# Math
glam = { version = "0.32", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }

# Async
pollster = "0.4"

# Error handling
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization (phosphor database, config, display lists)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
