[workspace]
members = [".", "crates/cie-data", "crates/phosphor-data", "crates/phosphor-data-macro"]

[package]
name = "phosphor"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
# CIE colorimetry data (compile-time)
cie-data = { path = "crates/cie-data" }

# Phosphor database (types + runtime loading)
phosphor-data = { path = "crates/phosphor-data" }
# Phosphor database (compile-time baking)
phosphor-data-macro = { path = "crates/phosphor-data-macro" }

# Windowing
winit = "0.30"

# GPU
wgpu = "27"

# UI
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
egui_extras = { version = "0.33", features = ["file"] }
egui_plot = "0.34"

# Audio decoding (oscilloscope music input)
symphonia = { version = "0.5", default-features = false, features = [
    "all-codecs",
    "all-formats",
    "opt-simd"
] }

# Math
glam = { version = "0.32", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }

# Async
pollster = "0.4"

# Error handling
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization (phosphor database, config, display lists)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rtrb = "0.3.2"
nom = "8.0.0"
strum = { version = "0.27.2", features = ["derive"] }

# Native file dialogs
rfd = "0.15"
natord = "1.0.9"
